RESOLVED FIXED241734
REGRESSION (r294902): Content with continuation leaves decoration bits behind when removed
https://bugs.webkit.org/show_bug.cgi?id=241734
Summary REGRESSION (r294902): Content with continuation leaves decoration bits behind...
alan
Reported 2022-06-17 17:01:44 PDT
Attachments
Patch (8.40 KB, patch)
2022-06-17 17:21 PDT, alan
no flags
Patch (8.37 KB, patch)
2022-06-18 13:16 PDT, alan
no flags
Patch (8.31 KB, patch)
2022-06-19 16:15 PDT, alan
no flags
alan
Comment 1 2022-06-17 17:21:15 PDT
alan
Comment 2 2022-06-18 13:16:33 PDT
Simon Fraser (smfr)
Comment 3 2022-06-19 08:24:50 PDT
Comment on attachment 460333 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=460333&action=review > LayoutTests/fast/repaint/force-repaint-when-layer-is-destroyed.html:29 > + result.innerText = internals.repaintRectsAsText().indexOf("8 8 140 126") != -1 ? "PASS" : "FAIL"; This seems fragile. Maybe use a more relaxed test?
alan
Comment 4 2022-06-19 16:15:36 PDT
alan
Comment 5 2022-06-19 16:52:19 PDT
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 460333 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=460333&action=review > > > LayoutTests/fast/repaint/force-repaint-when-layer-is-destroyed.html:29 > > + result.innerText = internals.repaintRectsAsText().indexOf("8 8 140 126") != -1 ? "PASS" : "FAIL"; > > This seems fragile. This is very precise, yes. It's the exact position/size of the box that needs repainting. I am open to suggestions, but block level boxes tend no to fluctuate their position/size.
EWS
Comment 6 2022-06-19 20:57:31 PDT
Committed r295665 (251670@main): <https://commits.webkit.org/251670@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460342 [details].
Note You need to log in before you can comment on or make changes to this bug.